--- a/index.html
+++ b/index.html
@@ -102,6 +102,15 @@ body {
     }
     .header { margin-bottom: 30px; }
     .user-info { margin-top: 0; }
+
+    /* Adicione estas regras para ajustar a logo no desktop */
+    .logo img {
+        height: 40px; /* Tamanho reduzido (era 50px no mobile) */
+    }
+    .logo h2 {
+        font-size: 1rem; /* Texto um pouco menor */
+        margin-top: 8px; /* Espaçamento ajustado */
+    }
 }
 </style>
 </head>
