--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ body {
         height: 40px; /* Tamanho reduzido (era 50px no mobile) */
     }
     .logo h2 {
-        font-size: 1rem; /* Texto um pouco menor */
+        font-size: 0.8rem; /* Texto um pouco menor */
         margin-top: 8px; /* Espaçamento ajustado */
     }
 }
@@ -123,7 +123,7 @@ body {
         </div>
         <div class="logo">
             <img src="logo.png" alt="Logo da Igreja">
-            <h2>Igreja Nova Esperança</h2>
+            <h2>Famílias Vivendo na Graça e Unção do Espírito</h2>
         </div>
 
         <div class="nav-menu" id="navMenu">
