--- a/ficha.html
+++ b/ficha.html
@@ -6,6 +6,7 @@
   <title>Ficha do Membro</title>
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
 
   <style>
     #foto {
@@ -146,7 +147,14 @@
         </div>
         <div class="mb-3">
           <label for="editFuncao" class="form-label">Função</label>
-          <input type="text" class="form-control" id="editFuncao">
+          <select class="form-select" id="editFuncao" required>
+            <option value="">Selecione uma função</option>
+            <option value="Pastor">Pastor</option>
+            <option value="Missionário(a)">Missionário(a)</option>
+            <option value="Diácono">Diácono</option>
+            <option value="Obreiro(a)">Obreiro(a)</option>
+            <option value="Membro">Membro</option>
+          </select>
         </div>
         <div class="mb-3">
           <label for="editTelefone" class="form-label">Telefone</label>
@@ -167,9 +175,6 @@
       </form>
     </div>
   </main>
-
-  <!-- Adicionando ícones do Bootstrap Icons -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
 
   <script type="module">
     import { db, storage } from './firebase-config.js';
@@ -240,9 +245,23 @@
           document.getElementById("editEstado").value = membroData.estado || '';
           document.getElementById("editBatismo").value = membroData.batismo || '';
           document.getElementById("editNascimento").value = membroData.nascimento || '';
-          document.getElementById("editFuncao").value = membroData.funcao || '';
           document.getElementById("editTelefone").value = membroData.telefone || '';
           document.getElementById("editSexo").value = membroData.sexo || 'Masculino';
+
+          // Preencher o campo de função com as opções específicas
+          const funcoes = ["Pastor", "Missionário(a)", "Diácono", "Obreiro(a)", "Membro"];
+          const funcaoSelect = document.getElementById("editFuncao");
+          const funcaoAtual = membroData.funcao || "";
+
+          if (funcaoAtual && !funcoes.includes(funcaoAtual)) {
+            const option = document.createElement("option");
+            option.value = funcaoAtual;
+            option.textContent = funcaoAtual;
+            option.selected = true;
+            funcaoSelect.appendChild(option);
+          }
+
+          funcaoSelect.value = funcaoAtual || "Membro";
         } else {
           document.querySelector('.card').innerHTML = '<p class="text-danger">Membro não encontrado.</p>';
         }
