--- a/ficha.html
+++ b/ficha.html
@@ -163,9 +163,9 @@
         <div class="mb-3">
           <label for="editSexo" class="form-label">Sexo</label>
           <select class="form-select" id="editSexo">
-            <option value="Masculino">Masculino</option>
-            <option value="Feminino">Feminino</option>
-            <option value="Outro">Outro</option>
+            <option value="masculino">Masculino</option>
+            <option value="feminino">Feminino</option>
+    
           </select>
         </div>
         <div class="d-flex justify-content-between mt-3">
