--- a/ficha.html
+++ b/ficha.html
@@ -112,9 +112,10 @@
       <form id="editMode" class="edit-mode">
         <div class="foto-container">
           <img id="fotoPreview" alt="Preview da foto" />
-          <button type="button" id="uploadButton" class="foto-upload-btn">
+          <label for="fotoInput" class="foto-upload-btn">
             <i class="bi bi-camera"></i>
-          </button>
+          </label>
+          <input type="file" id="fotoInput" accept="image/*" class="d-none">
           <input type="hidden" id="editFotoURL">
         </div>
 
@@ -202,21 +203,48 @@ let membroData = {};
 let currentFotoURL = '';
 
 // Elementos do DOM
-const viewMode = document.getElementById('viewMode');
-const editMode = document.getElementById('editMode');
-const editBtn = document.getElementById('editBtn');
-const cancelEditBtn = document.getElementById('cancelEditBtn');
-const fotoView = document.getElementById('foto');
+const fotoInput = document.getElementById('fotoInput');
+const fotoPreview = document.getElementById('fotoPreview');
+const editFotoURL = document.getElementById('editFotoURL');
 
-// Inicializar o widget de upload
-document.getElementById('uploadButton').addEventListener('click', function() {
-  cloudinary.openUploadWidget(cloudinaryConfig, (error, result) => {
-    if (!error && result && result.event === 'success') {
-      const fotoURL = result.info.secure_url;
-      document.getElementById('editFotoURL').value = fotoURL;
-      document.getElementById('fotoPreview').src = fotoURL;
-    }
-  });
+// Upload direto da imagem
+fotoInput.addEventListener('change', async (e) => {
+  const file = e.target.files[0];
+  if (!file) return;
+
+  // Mostrar preview imediato
+  const reader = new FileReader();
+  reader.onload = (event) => {
+    fotoPreview.src = event.target.result;
+  };
+  reader.readAsDataURL(file);
+
+  try {
+    // Upload para Cloudinary
+    const formData = new FormData();
+    formData.append("file", file);
+    formData.append("upload_preset", "igreja_preset");
+
+    const response = await fetch("https://api.cloudinary.com/v1_1/bcrenato/image/upload", {
+      method: "POST",
+      body: formData
+    });
+
+    if (!response.ok) throw new Error("Erro no upload");
+    
+    const data = await response.json();
+    editFotoURL.value = data.secure_url;
+    
+  } catch (error) {
+    console.error("Upload error:", error);
+    alert("Erro ao enviar foto. Tente novamente.");
+  }
+});
+
+// Para habilitar câmera diretamente em dispositivos móveis
+document.querySelector('.foto-upload-btn').addEventListener('click', () => {
+  fotoInput.setAttribute('capture', 'environment'); // Para câmera traseira
+  fotoInput.click();
 });
 
 // Função para alternar entre modos
