--- a/ficha.html
+++ b/ficha.html
@@ -201,8 +201,11 @@
   const editFotoURL = document.getElementById('editFotoURL');
   const fotoView = document.getElementById('foto');
 
-  // Configura o input para usar a câmera em dispositivos móveis
-  fotoInput.setAttribute('capture', 'environment');
+  // Configuração simplificada para upload de foto
+  document.querySelector('.foto-upload-btn').addEventListener('click', (e) => {
+    e.preventDefault();
+    fotoInput.click(); // Dispara o input de arquivo (mostrará opções nativas no mobile)
+  });
 
   // Upload direto da imagem
   fotoInput.addEventListener('change', async (e) => {
@@ -237,28 +240,6 @@
       alert("Erro ao enviar foto. Tente novamente.");
     }
   });
-
-
-// ===== NOVO EVENTO PARA ESCOLHA DE CÂMERA/GALERIA =====
-  document.querySelector('.foto-upload-btn').addEventListener('click', async (e) => {
-    e.preventDefault();
-    const isMobile = /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
-
-    if (isMobile) {
-      const option = await new Promise((resolve) => {
-        const choice = confirm("Escolha uma opção:\n\n1. OK → Tirar foto\n2. Cancelar → Selecionar da galeria");
-        resolve(choice ? "camera" : "gallery");
-      });
-      if (option === "camera") {
-        fotoInput.setAttribute('capture', 'environment');
-      } else {
-        fotoInput.removeAttribute('capture');
-      }
-    }
-    fotoInput.click();
-  });
-
-    
 
   // Função para alternar entre modos
   function toggleEditMode(isEditing) {
