--- a/ficha.html
+++ b/ficha.html
@@ -156,8 +156,8 @@
           <select class="form-select" id="editFuncao" required>
             <option value="">Selecione uma função</option>
             <option value="Pastor">Pastor</option>
-            <option value="Missionário(a)">Missionário(a)</option>
-            <option value="Diácono">Diácono</option>
+            <option value="Missionario(a)">Missionário(a)</option>
+            <option value="Diacono">Diácono</option>
             <option value="Obreiro(a)">Obreiro(a)</option>
             <option value="Membro">Membro</option>
           </select>
@@ -301,7 +301,7 @@
         editFotoURL.value = membroData.fotoURL || '';
 
         // Preencher o campo de função
-        const funcoes = ["Pastor", "Missionário(a)", "Diácono", "Obreiro(a)", "Membro"];
+        const funcoes = ["Pastor", "Missionário(a)", "Diacono", "Obreiro(a)", "Membro"];
         const funcaoSelect = document.getElementById("editFuncao");
         const funcaoAtual = membroData.funcao || "";
 
