--- a/ficha.html
+++ b/ficha.html
@@ -427,7 +427,7 @@ exportPdfBtn.addEventListener('click', () => {
     const textIndent = marginLeft + photoWidth + 10;
     let verticalPosition = marginTop;
     const lineHeight = 8; // Aumentado para mais espaçamento
-    const sectionSpacing = 12; // Espaço entre seções
+    const sectionSpacing = 9; // Espaço entre seções
     
     // Função para tratar campos vazios
     const getFieldValue = (value) => value && value.trim() !== '' ? value : 'Não Informado';
@@ -457,7 +457,7 @@ exportPdfBtn.addEventListener('click', () => {
     doc.text('Nome Completo:', textIndent, verticalPosition + 5);
     doc.setFont('helvetica', 'normal');
     doc.text(getFieldValue(membroData.nome), textIndent, verticalPosition + 5 + lineHeight);
-   verticalPosition += lineHeight*2 + sectionSpacing;
+   verticalPosition +=  sectionSpacing;
     
     // Sexo e Data de Nascimento
     doc.setFont('helvetica', 'bold');
