--- a/ficha.html
+++ b/ficha.html
@@ -421,6 +421,8 @@ exportPdfBtn.addEventListener('click', () => {
     
     // Configurações
     const marginLeft = 15;
+    const marginRight = 15;
+  
     const marginTop = 20;
     const photoWidth = 30;
     const photoHeight = 40;
