--- a/presenca/lista.html
+++ b/presenca/lista.html
@@ -90,6 +90,11 @@
             <a class="nav-link" href="lista_culto.html">
               <i class="fas fa-church me-1"></i> Consulta Lista de Presença
             </a>
+
+             <li class="nav-item">
+            <a class="nav-link" href="frequencia.html">
+              <i class="fas fa-church me-1"></i> Frequencia Mensal
+            </a>
             
           </li>
         </ul>
