--- a/presenca/lista.html
+++ b/presenca/lista.html
@@ -93,7 +93,7 @@
 
              <li class="nav-item">
             <a class="nav-link" href="frequencia.html">
-              <i class="fas fa-church me-1"></i> Frequencia Mensal
+              <i class="bi bi-graph-up me-1"></i> Frequencia Mensal
             </a>
             
           </li>
