--- a/presenca/lista_culto.html
+++ b/presenca/lista_culto.html
@@ -88,6 +88,12 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
+
+          <li class="nav-item">
+            <a class="nav-link" href="frequencia.html">
+              <i class="bi bi-graph-up me-1"></i> Frequencia Mensal
+            </a>
+            
           <li class="nav-item">
             <a class="nav-link" href="lista.html">
               <i class="bi bi-arrow-left"></i> Voltar para Cadastro
