--- a/presenca/frequencia.html
+++ b/presenca/frequencia.html
@@ -81,10 +81,13 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
+          
           <li class="nav-item">
             <a class="nav-link" href="lista_culto.html">
-              <i class="bi bi-arrow-left"></i> Voltar para Consulta
+              <i class="fas fa-church me-1"></i> Consulta Lista de Presença
             </a>
+
+            
           </li>
           <li class="nav-item">
             <a class="nav-link" id="btn-logout" href="#">
