--- a/cadastro-membros.html
+++ b/cadastro-membros.html
@@ -183,5 +183,8 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script type="module" src="app.js"></script>
+
+  <script src="js/session-timeout.js"></script>
+  
 </body>
 </html>
