--- a/index.html
+++ b/index.html
@@ -256,7 +256,10 @@ navItems.forEach(item => {
 });
 </script>
 
-<script src="js/session-timeout.js"></script>
+<script type="module">
+  import "js/session-timeout.js";
+</script>
+</body>
 
 
 </body>
