--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ navItems.forEach(item => {
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js"></script>
 
 <!-- Seu firebase-config.js -->
-<script src="/caminho/para/seu/firebase-config.js"></script>
+<script src="firebase-config.js"></script>
 
 <!-- Session Timeout -->
 <script type="module">
