--- a/index.html
+++ b/index.html
@@ -256,17 +256,52 @@ navItems.forEach(item => {
 });
 </script>
 
-<!-- Firebase App -->
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
 
-<!-- Firebase Auth -->
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
 
-<!-- Seu Firebase Config (na raiz) -->
-<script src="firebase-config.js"></script>
 
-<!-- Session Timeout -->
-<script src="js/session-timeout.js"></script>
+    
+<script type="module">
+  import { auth } from './firebase-config.js';
+
+  // timeout:
+  const timeoutMillis = 5 * 60 * 1000;
+  const warningMillis = timeoutMillis - 30 * 1000;
+  let warningTimeoutId;
+  let logoutTimeoutId;
+
+  function resetTimers() {
+      clearTimeout(warningTimeoutId);
+      clearTimeout(logoutTimeoutId);
+
+      warningTimeoutId = setTimeout(showWarning, warningMillis);
+      logoutTimeoutId = setTimeout(logout, timeoutMillis);
+  }
+
+  function showWarning() {
+      const stay = confirm("Sua sessão vai expirar em 30 segundos por inatividade. Deseja continuar?");
+      if (stay) {
+          resetTimers();
+      }
+  }
+
+  function logout() {
+      console.log("Sessão expirada por inatividade.");
+      auth.signOut().then(() => {
+          alert("Você foi desconectado por inatividade.");
+          window.location.href = "login.html";
+      }).catch((error) => {
+          console.error("Erro ao deslogar:", error);
+          window.location.href = "login.html";
+      });
+  }
+
+  ['click', 'mousemove', 'keydown', 'scroll', 'touchstart'].forEach(evt => {
+      document.addEventListener(evt, resetTimers, false);
+  });
+
+  resetTimers();
+</script>
+
 
 </body>
 </html>
