--- a/index.html
+++ b/index.html
@@ -263,31 +263,17 @@ navItems.forEach(item => {
 <script type="module">
   import { auth } from './firebase-config.js';
 
-  // timeout:
   const timeoutMillis = 5 * 60 * 1000;
-  const warningMillis = timeoutMillis - 30 * 1000;
-  let warningTimeoutId;
   let logoutTimeoutId;
 
-  function resetTimers() {
-      clearTimeout(warningTimeoutId);
+  function resetTimer() {
       clearTimeout(logoutTimeoutId);
-
-      warningTimeoutId = setTimeout(showWarning, warningMillis);
       logoutTimeoutId = setTimeout(logout, timeoutMillis);
-  }
-
-  function showWarning() {
-      const stay = confirm("Sua sessão vai expirar em 30 segundos por inatividade. Deseja continuar?");
-      if (stay) {
-          resetTimers();
-      }
   }
 
   function logout() {
       console.log("Sessão expirada por inatividade.");
       auth.signOut().then(() => {
-          alert("Você foi desconectado por inatividade.");
           window.location.href = "login.html";
       }).catch((error) => {
           console.error("Erro ao deslogar:", error);
@@ -296,11 +282,12 @@ navItems.forEach(item => {
   }
 
   ['click', 'mousemove', 'keydown', 'scroll', 'touchstart'].forEach(evt => {
-      document.addEventListener(evt, resetTimers, false);
+      document.addEventListener(evt, resetTimer, false);
   });
 
-  resetTimers();
+  resetTimer();
 </script>
+
 
 
 </body>
