--- a/index.html
+++ b/index.html
@@ -260,33 +260,8 @@ navItems.forEach(item => {
 
 
     
-<script type="module">
-  import { auth } from './firebase-config.js';
-
-  const timeoutMillis = 5 * 60 * 1000;
-  let logoutTimeoutId;
-
-  function resetTimer() {
-      clearTimeout(logoutTimeoutId);
-      logoutTimeoutId = setTimeout(logout, timeoutMillis);
-  }
-
-  function logout() {
-      console.log("Sessão expirada por inatividade.");
-      auth.signOut().then(() => {
-          window.location.href = "login.html";
-      }).catch((error) => {
-          console.error("Erro ao deslogar:", error);
-          window.location.href = "login.html";
-      });
-  }
-
-  ['click', 'mousemove', 'keydown', 'scroll', 'touchstart'].forEach(evt => {
-      document.addEventListener(evt, resetTimer, false);
-  });
-
-  resetTimer();
-</script>
+<script type="module" src="js/session-timeout.js"></script>
+</body>
 
 
 
