--- a/index.html
+++ b/index.html
@@ -258,8 +258,7 @@ navItems.forEach(item => {
 
 
 
-
-    
+<!-- logoff apos inatividade -->
 <script type="module" src="js/session-timeout.js"></script>
 </body>
 
