--- a/login.html
+++ b/login.html
@@ -56,7 +56,8 @@
 </div>
 
 <script type="module">
-import { loginUser, logout } from './users.js';
+import { loginUser } from './users.js';
+import { logout } from './auth.js';
 import { db } from './firebase-config.js';
 import { ref, get } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-database.js";
 
