--- a/register.html
+++ b/register.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -8,28 +7,34 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 <style>
-  body { padding-top: 70px; background-color: #f8f9fa; }
-  .navbar { background-color: #4CAF50; }
-  .navbar .nav-link, .navbar .navbar-brand { color: #fff; }
-  .navbar .nav-link:hover, .navbar .navbar-brand:hover { color: #ddd; }
-  .btn-primary { background-color: #28a745; border-color: #28a745; }
-  .btn-primary:hover { background-color: #218838; border-color: #1e7e34; }
-  .admin-card { border-left: 4px solid #ffc107; }
+body { padding-top: 70px; background-color: #f8f9fa; }
+.navbar { background-color: #4CAF50; }
+.navbar .nav-link, .navbar .navbar-brand { color: #fff; }
+.navbar .nav-link:hover, .navbar .navbar-brand:hover { color: #ddd; }
+.admin-card { border-left: 4px solid #ffc107; }
 </style>
 </head>
 <body>
 
 <script type="module">
 import { checkAdminAuth } from './auth.js';
-if (!await checkAdminAuth()) { window.location.href = 'index.html'; }
+if (!await checkAdminAuth()) window.location.href = 'index.html';
 </script>
 
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-  <div class="container">
-    <a class="navbar-brand" href="index.html">
-      <i class="fas fa-user-shield me-2"></i> Gerenciar Usuários
-    </a>
-  </div>
+<div class="container">
+<a class="navbar-brand" href="index.html"><i class="fas fa-user-shield me-2"></i> Gerenciar Usuários</a>
+<div class="collapse navbar-collapse">
+<ul class="navbar-nav me-auto">
+<li class="nav-item"><a class="nav-link" href="index.html"><i class="fas fa-home"></i> Início</a></li>
+<li class="nav-item"><a class="nav-link active" href="register.html"><i class="fas fa-users-cog"></i> Usuários</a></li>
+</ul>
+<div class="d-flex align-items-center">
+<span id="currentUserDisplay" class="navbar-text text-warning me-3"></span>
+<button id="logoutBtn" class="btn btn-sm btn-outline-light">Sair</button>
+</div>
+</div>
+</div>
 </nav>
 
 <div class="container mt-4">
@@ -39,11 +44,11 @@ if (!await checkAdminAuth()) { window.location.href = 'index.html'; }
 <div class="card-header bg-white"><h3 class="text-center mb-0"><i class="fas fa-user-plus text-primary me-2"></i> Cadastrar Novo Usuário</h3></div>
 <div class="card-body">
 <form id="registerForm">
-<div class="mb-3"><label for="fullName" class="form-label"><i class="fas fa-user me-1"></i> Nome Completo</label><input type="text" id="fullName" class="form-control" required></div>
-<div class="mb-3"><label for="username" class="form-label"><i class="fas fa-at me-1"></i> Nome de Usuário</label><input type="text" id="username" class="form-control" required></div>
-<div class="mb-3"><label for="password" class="form-label"><i class="fas fa-lock me-1"></i> Senha</label><input type="password" id="password" class="form-control" required minlength="6"></div>
-<div class="mb-3 form-check"><input type="checkbox" id="isAdmin" class="form-check-input"><label for="isAdmin" class="form-check-label"><i class="fas fa-user-shield me-1"></i> É administrador?</label></div>
-<button type="submit" class="btn btn-primary w-100 py-2"><i class="fas fa-save me-2"></i> Cadastrar Usuário</button>
+<div class="mb-3"><label for="fullName" class="form-label">Nome Completo</label><input type="text" id="fullName" class="form-control" required></div>
+<div class="mb-3"><label for="username" class="form-label">Nome de Usuário</label><input type="text" id="username" class="form-control" required></div>
+<div class="mb-3"><label for="password" class="form-label">Senha</label><input type="password" id="password" class="form-control" required minlength="6"></div>
+<div class="mb-3 form-check"><input type="checkbox" id="isAdmin" class="form-check-input"><label for="isAdmin" class="form-check-label">É administrador?</label></div>
+<button type="submit" class="btn btn-success w-100 py-2"><i class="fas fa-save me-2"></i> Cadastrar Usuário</button>
 </form>
 </div></div></div>
 
@@ -52,99 +57,123 @@ if (!await checkAdminAuth()) { window.location.href = 'index.html'; }
 <div class="card-header bg-white"><h3 class="text-center mb-0"><i class="fas fa-users text-primary me-2"></i> Usuários Cadastrados</h3></div>
 <div class="card-body">
 <div class="table-responsive">
-<table class="table table-hover user-table">
+<table class="table table-hover">
 <thead><tr><th>Nome</th><th>Usuário</th><th>Tipo</th><th>Habilitado</th><th>Ações</th></tr></thead>
 <tbody id="usersList"></tbody>
 </table></div></div></div></div></div></div>
 
-<div id="toastContainer" class="toast-container"></div>
+<div class="modal fade" id="passwordModal" tabindex="-1">
+<div class="modal-dialog">
+<div class="modal-content">
+<div class="modal-header bg-warning">
+<h5 class="modal-title"><i class="fas fa-key me-2"></i> Alterar Senha</h5>
+<button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+</div>
+<div class="modal-body">
+<form id="passwordForm">
+<input type="hidden" id="userId">
+<div class="mb-3"><label for="newPassword" class="form-label">Nova Senha</label><input type="password" id="newPassword" class="form-control" required></div>
+<div class="mb-3"><label for="confirmPassword" class="form-label">Confirmar Senha</label><input type="password" id="confirmPassword" class="form-control" required></div>
+</form>
+</div>
+<div class="modal-footer">
+<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+<button type="button" id="savePasswordBtn" class="btn btn-primary">Salvar</button>
+</div>
+</div></div></div>
+
+<div id="toastContainer" class="toast-container position-fixed top-0 end-0 p-3"></div>
 
 <script type="module">
 import { db, auth } from './firebase-config.js';
-import { ref, get, remove } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-database.js";
+import { ref, get, set, remove } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-database.js";
 import { registerUser, getAllUsers, deleteUser, toggleUserEnabled } from './users.js';
+import { updatePassword } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
 
 const usersList = document.getElementById('usersList');
 const registerForm = document.getElementById('registerForm');
+const passwordForm = document.getElementById('passwordForm');
 
 async function loadUsers() {
-  try {
-    const users = await getAllUsers();
-    usersList.innerHTML = '';
-    if (users.length === 0) {
-      usersList.innerHTML = '<tr><td colspan="5" class="text-center">Nenhum usuário cadastrado</td></tr>';
-      return;
-    }
-    users.forEach(user => {
-      const row = document.createElement('tr');
-      row.innerHTML = `
-        <td>${user.fullName || 'Não informado'}</td>
-        <td>${user.username}</td>
-        <td>${user.isAdmin ? 'Admin' : 'Usuário'}</td>
-        <td><input type="checkbox" class="enable-user" data-id="${user.id}" ${user.isEnabled ? 'checked' : ''}></td>
-        <td><button class="btn btn-sm btn-danger delete-user" data-id="${user.id}"><i class="fas fa-trash"></i> Excluir</button></td>
-      `;
-      usersList.appendChild(row);
-    });
-    document.querySelectorAll('.enable-user').forEach(checkbox => {
-      checkbox.addEventListener('change', async () => {
-        const userId = checkbox.getAttribute('data-id');
-        const enabled = checkbox.checked;
-        try {
-          await toggleUserEnabled(userId, enabled);
-          showToast(`Usuário ${enabled ? 'habilitado' : 'desabilitado'}`);
-        } catch (err) {
-          showToast('Erro ao atualizar status', 'danger');
-          checkbox.checked = !enabled;
-        }
-      });
-    });
-    document.querySelectorAll('.delete-user').forEach(btn => {
-      btn.addEventListener('click', async () => {
-        const userId = btn.getAttribute('data-id');
-        if (confirm('Deseja excluir este usuário?')) {
-          try {
-            await deleteUser(userId);
-            showToast('Usuário excluído com sucesso');
-            loadUsers();
-          } catch (err) {
-            showToast(err.message, 'danger');
-          }
-        }
-      });
-    });
-  } catch (err) {
-    showToast('Erro ao carregar usuários', 'danger');
-  }
+const users = await getAllUsers();
+usersList.innerHTML = '';
+if (!users.length) {
+usersList.innerHTML = '<tr><td colspan="5" class="text-center">Nenhum usuário cadastrado</td></tr>';
+return;
+}
+users.forEach(user => {
+const row = document.createElement('tr');
+row.innerHTML = `
+<td>${user.fullName}</td>
+<td>${user.username}</td>
+<td>${user.isAdmin ? 'Admin' : 'Usuário'}</td>
+<td><input type="checkbox" class="enable-user" data-id="${user.id}" ${user.isEnabled ? 'checked' : ''}></td>
+<td>
+<button class="btn btn-warning btn-sm change-password" data-id="${user.id}"><i class="fas fa-key"></i></button>
+<button class="btn btn-danger btn-sm delete-user" data-id="${user.id}"><i class="fas fa-trash"></i></button>
+</td>`;
+usersList.appendChild(row);
+});
+document.querySelectorAll('.enable-user').forEach(cb => {
+cb.addEventListener('change', async () => {
+await toggleUserEnabled(cb.dataset.id, cb.checked);
+showToast(`Usuário ${cb.checked ? 'habilitado' : 'desabilitado'}`);
+});
+});
+document.querySelectorAll('.delete-user').forEach(btn => {
+btn.addEventListener('click', async () => {
+if (confirm('Excluir este usuário?')) {
+await deleteUser(btn.dataset.id);
+showToast('Usuário excluído');
+loadUsers();
+}
+});
+});
+document.querySelectorAll('.change-password').forEach(btn => {
+btn.addEventListener('click', () => {
+document.getElementById('userId').value = btn.dataset.id;
+new bootstrap.Modal(document.getElementById('passwordModal')).show();
+});
+});
 }
 
-registerForm.addEventListener('submit', async (e) => {
-  e.preventDefault();
-  try {
-    await registerUser(
-      document.getElementById('username').value,
-      document.getElementById('password').value,
-      document.getElementById('fullName').value,
-      document.getElementById('isAdmin').checked
-    );
-    showToast('Usuário cadastrado com sucesso!');
-    registerForm.reset();
-    loadUsers();
-  } catch (error) {
-    showToast(error.message, 'danger');
-  }
+registerForm.addEventListener('submit', async e => {
+e.preventDefault();
+await registerUser(
+document.getElementById('username').value,
+document.getElementById('password').value,
+document.getElementById('fullName').value,
+document.getElementById('isAdmin').checked
+);
+showToast('Usuário cadastrado');
+registerForm.reset();
+loadUsers();
 });
 
-function showToast(message, type = 'success') {
-  const toast = document.createElement('div');
-  toast.className = `toast show align-items-center text-white bg-${type}`;
-  toast.role = 'alert';
-  toast.innerHTML = `<div class="d-flex"><div class="toast-body">${message}</div><button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"></button></div>`;
-  document.getElementById('toastContainer').appendChild(toast);
-  setTimeout(() => { toast.classList.remove('show'); setTimeout(() => toast.remove(), 300); }, 3000);
+document.getElementById('savePasswordBtn').addEventListener('click', async () => {
+const userId = document.getElementById('userId').value;
+const newPassword = document.getElementById('newPassword').value;
+const confirmPassword = document.getElementById('confirmPassword').value;
+if (newPassword !== confirmPassword) {
+showToast('Senhas não coincidem', 'danger');
+return;
+}
+await set(ref(db, `users/${userId}/passwordReset`), newPassword);
+showToast('Senha salva (reset via admin)');
+passwordForm.reset();
+bootstrap.Modal.getInstance(document.getElementById('passwordModal')).hide();
+});
+
+function showToast(message, type='success') {
+const toast = document.createElement('div');
+toast.className = `toast show text-bg-${type} m-2`;
+toast.innerHTML = `<div class="toast-body">${message}</div>`;
+document.getElementById('toastContainer').appendChild(toast);
+setTimeout(() => { toast.remove(); }, 3000);
 }
 
 document.addEventListener('DOMContentLoaded', () => loadUsers());
 </script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-</body></html>
+</body>
+</html>
