--- a/login.html
+++ b/login.html
@@ -46,6 +46,12 @@
     <button type="submit" class="btn btn-success btn-login w-100">
       <i class="fas fa-sign-in-alt me-2"></i> Entrar
     </button>
+
+    <p class="mt-3 text-center">
+     <a href="cadastro.html">Não tem conta? Cadastre-se aqui</a>
+    </p>
+
+    
   </form>
 
   <div id="errorMessage" class="alert alert-danger d-none"></div>
