--- a/login.html
+++ b/login.html
@@ -48,7 +48,7 @@
     </button>
 
     <p class="mt-3 text-center">
-     <a href="cadastro.html">Não tem conta? Cadastre-se aqui</a>
+     <a href="cadastro_usuario.html">Não tem conta? Cadastre-se aqui</a>
     </p>
 
     
