--- a/register.html
+++ b/register.html
@@ -16,11 +16,6 @@ body { padding-top: 70px; background-color: #f8f9fa; }
 </head>
 <body>
 
-<script type="module">
-import { checkAdminAuth } from './auth.js';
-if (!await checkAdminAuth()) window.location.href = 'index.html';
-</script>
-
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
 <div class="container">
 <a class="navbar-brand" href="index.html"><i class="fas fa-user-shield me-2"></i> Gerenciar Usuários</a>
@@ -29,10 +24,6 @@ if (!await checkAdminAuth()) window.location.href = 'index.html';
 <li class="nav-item"><a class="nav-link" href="index.html"><i class="fas fa-home"></i> Início</a></li>
 <li class="nav-item"><a class="nav-link active" href="register.html"><i class="fas fa-users-cog"></i> Usuários</a></li>
 </ul>
-<div class="d-flex align-items-center">
-<span id="currentUserDisplay" class="navbar-text text-warning me-3"></span>
-<button id="logoutBtn" class="btn btn-sm btn-outline-light">Sair</button>
-</div>
 </div>
 </div>
 </nav>
@@ -41,59 +32,31 @@ if (!await checkAdminAuth()) window.location.href = 'index.html';
 <div class="row">
 <div class="col-lg-6 mb-4">
 <div class="card admin-card shadow">
-<div class="card-header bg-white"><h3 class="text-center mb-0"><i class="fas fa-user-plus text-primary me-2"></i> Cadastrar Novo Usuário</h3></div>
-<div class="card-body">
-<form id="registerForm">
-<div class="mb-3"><label for="fullName" class="form-label">Nome Completo</label><input type="text" id="fullName" class="form-control" required></div>
-<div class="mb-3"><label for="username" class="form-label">Nome de Usuário</label><input type="text" id="username" class="form-control" required></div>
-<div class="mb-3"><label for="password" class="form-label">Senha</label><input type="password" id="password" class="form-control" required minlength="6"></div>
-<div class="mb-3 form-check"><input type="checkbox" id="isAdmin" class="form-check-input"><label for="isAdmin" class="form-check-label">É administrador?</label></div>
-<button type="submit" class="btn btn-success w-100 py-2"><i class="fas fa-save me-2"></i> Cadastrar Usuário</button>
-</form>
-</div></div></div>
-
-<div class="col-lg-6">
-<div class="card admin-card shadow">
-<div class="card-header bg-white"><h3 class="text-center mb-0"><i class="fas fa-users text-primary me-2"></i> Usuários Cadastrados</h3></div>
+<div class="card-header bg-white"><h3 class="text-center mb-0"><i class="fas fa-users text-primary me-2"></i> Usuários Cadastrados no DB</h3></div>
 <div class="card-body">
 <div class="table-responsive">
 <table class="table table-hover">
 <thead><tr><th>Nome</th><th>Usuário</th><th>Tipo</th><th>Habilitado</th><th>Ações</th></tr></thead>
 <tbody id="usersList"></tbody>
-</table></div></div></div></div></div></div>
+</table></div></div></div></div>
 
-<div class="modal fade" id="passwordModal" tabindex="-1">
-<div class="modal-dialog">
-<div class="modal-content">
-<div class="modal-header bg-warning">
-<h5 class="modal-title"><i class="fas fa-key me-2"></i> Alterar Senha</h5>
-<button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-</div>
-<div class="modal-body">
-<form id="passwordForm">
-<input type="hidden" id="userId">
-<div class="mb-3"><label for="newPassword" class="form-label">Nova Senha</label><input type="password" id="newPassword" class="form-control" required></div>
-<div class="mb-3"><label for="confirmPassword" class="form-label">Confirmar Senha</label><input type="password" id="confirmPassword" class="form-control" required></div>
-</form>
-</div>
-<div class="modal-footer">
-<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-<button type="button" id="savePasswordBtn" class="btn btn-primary">Salvar</button>
-</div>
-</div></div></div>
+<div class="col-lg-6">
+<div class="card admin-card shadow">
+<div class="card-header bg-white"><h3 class="text-center mb-0"><i class="fas fa-user-clock text-primary me-2"></i> Usuários do Auth ainda não no DB</h3></div>
+<div class="card-body">
+<ul id="authUsers" class="list-group"></ul>
+</div></div></div></div></div>
 
 <div id="toastContainer" class="toast-container position-fixed top-0 end-0 p-3"></div>
 
 <script type="module">
 import { db, auth } from './firebase-config.js';
 import { ref, get, set, remove } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-database.js";
-import { registerUser, getAllUsers, deleteUser, toggleUserEnabled } from './users.js';
-import { updatePassword } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
+import { getAllUsers, deleteUser, toggleUserEnabled, createUserInDB } from './users.js';
 
 const usersList = document.getElementById('usersList');
-const registerForm = document.getElementById('registerForm');
-const passwordForm = document.getElementById('passwordForm');
 
+// lista os usuários já no DB
 async function loadUsers() {
 const users = await getAllUsers();
 usersList.innerHTML = '';
@@ -109,7 +72,6 @@ row.innerHTML = `
 <td>${user.isAdmin ? 'Admin' : 'Usuário'}</td>
 <td><input type="checkbox" class="enable-user" data-id="${user.id}" ${user.isEnabled ? 'checked' : ''}></td>
 <td>
-<button class="btn btn-warning btn-sm change-password" data-id="${user.id}"><i class="fas fa-key"></i></button>
 <button class="btn btn-danger btn-sm delete-user" data-id="${user.id}"><i class="fas fa-trash"></i></button>
 </td>`;
 usersList.appendChild(row);
@@ -129,40 +91,7 @@ loadUsers();
 }
 });
 });
-document.querySelectorAll('.change-password').forEach(btn => {
-btn.addEventListener('click', () => {
-document.getElementById('userId').value = btn.dataset.id;
-new bootstrap.Modal(document.getElementById('passwordModal')).show();
-});
-});
 }
-
-registerForm.addEventListener('submit', async e => {
-e.preventDefault();
-await registerUser(
-document.getElementById('username').value,
-document.getElementById('password').value,
-document.getElementById('fullName').value,
-document.getElementById('isAdmin').checked
-);
-showToast('Usuário cadastrado');
-registerForm.reset();
-loadUsers();
-});
-
-document.getElementById('savePasswordBtn').addEventListener('click', async () => {
-const userId = document.getElementById('userId').value;
-const newPassword = document.getElementById('newPassword').value;
-const confirmPassword = document.getElementById('confirmPassword').value;
-if (newPassword !== confirmPassword) {
-showToast('Senhas não coincidem', 'danger');
-return;
-}
-await set(ref(db, `users/${userId}/passwordReset`), newPassword);
-showToast('Senha salva (reset via admin)');
-passwordForm.reset();
-bootstrap.Modal.getInstance(document.getElementById('passwordModal')).hide();
-});
 
 function showToast(message, type='success') {
 const toast = document.createElement('div');
@@ -172,8 +101,41 @@ document.getElementById('toastContainer').appendChild(toast);
 setTimeout(() => { toast.remove(); }, 3000);
 }
 
-document.addEventListener('DOMContentLoaded', () => loadUsers());
+// 🔷 Lista fake para simular usuários do Auth ainda não no DB
+const authUsers = [
+  { uid: 'uid1', username: 'joao', displayName: 'João da Silva' },
+  { uid: 'uid2', username: 'maria', displayName: 'Maria Souza' }
+];
+
+function listarUsuariosAuth() {
+  const ul = document.getElementById('authUsers');
+  ul.innerHTML = '';
+
+  authUsers.forEach(u => {
+    const li = document.createElement('li');
+    li.className = 'list-group-item d-flex justify-content-between align-items-center';
+    li.innerHTML = `
+      <span>${u.displayName} (${u.username})</span>
+      <button class="btn btn-primary btn-sm" onclick="criarNoDB('${u.uid}','${u.username}','${u.displayName}')">
+        Criar no DB
+      </button>
+    `;
+    ul.appendChild(li);
+  });
+}
+
+window.criarNoDB = async (uid, username, fullName) => {
+  await createUserInDB(uid, username, fullName, false);
+  showToast(`Usuário ${fullName} criado no DB!`);
+  loadUsers();
+};
+
+document.addEventListener('DOMContentLoaded', () => {
+  loadUsers();
+  listarUsuariosAuth();
+});
 </script>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
